FIX misaligned HR + bottom div text being cutoff

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ body {
     }
 
     .bottom-div {
-        margin-bottom: 15px;
+        margin-bottom: 15px !important;
     }
 }
 
@@ -132,7 +132,6 @@ body {
 
 .body-structure > hr {
     width: 80%;
-    margin-left: 10%;
  }
 
 .body-structure > .my-h2 {
